# spice

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  spice.py
.github/workflows/: ruff.yml
scripts/: caching.py  mytoml.toml  o1.py  prompt.txt  run.py  timing.py
spice/: __init__.py  call_args.py  client_manager.py  custom_retry_strategy.py  embeddings.py  errors.py  models.py  providers.py  retry_strategy.py  spice.py  spice_message.py  utils.py  whisper.py  wrapped_clients.py
spice/retry_strategy/: __init__.py  converter_strategy.py  default_strategy.py  validator_strategy.py
tests/: conftest.py  test_models.py  test_spice.py
