[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]

[tool.hatch.build.targets.wheel]
packages=["spice"]

[project]
name = "spiceai"
version = "0.1.8"
license = {text = "Apache-2.0"}
description = "A Python library for building AI-powered applications."
readme = "README.md"
dependencies = [
    "python-dotenv",
    "openai",
    "anthropic",
    "pillow",
    "tiktoken"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright"
]
