[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]

[tool.hatch.build.targets.wheel]
packages=["spice"]

[project]
name = "spiceai"
version = "0.3.3"
license = {text = "Apache-2.0"}
description = "A Python library for building AI-powered applications."
readme = "README.md"
dependencies = [
    "python-dotenv",
    "openai",
    "anthropic",
    "pillow",
    "tiktoken",
    "httpx",
    "jinja2"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-asyncio"
]
